# dnscheck

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/: main.py
src/tpl/: code.js  index.html
tests/testcafe/: dnscheck.test.js  record.sh  run.sh
