[project]
name = "wasmer-fastapi-websockets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pypandoc>=1.15",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
